bizinikiwi/pezframe/support/test/tests/pezpallet_ui/storage_value_duplicate_named_generic.stderr
error: Invalid pezpallet::storage, Duplicated named generic
  --> tests/pezpallet_ui/storage_value_duplicate_named_generic.rs:36:42
   |
36 |     type Foo<T> = StorageValue<Value = u32, Value = u32>;
   |                                             ^^^^^

error: Invalid pezpallet::storage, Duplicated named generic
  --> tests/pezpallet_ui/storage_value_duplicate_named_generic.rs:36:29
   |
36 |     type Foo<T> = StorageValue<Value = u32, Value = u32>;
   |                                ^^^^^
